--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,318 @@
 .App {
   text-align: center;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header-ul-onlyOnePage {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  
+}
+
+.App-footer {
+  background-color: black;
+  color: whitesmoke;
+}
+
+.App-main {
+  background-color: white;
+}
+
+.navbar-light .navbar-nav .active>.nav-link{
+  color: #20B2AA;
+  font-weight: bold;
+}
+
+h2, h3, p {
+  padding-bottom: 25px;
+}
+
+.descriptionBlock {
+  float: right;
+  text-align: left;
+  padding: 10%;
+  max-width: 55%;
+}
+
+.descriptionBlock p{
+  color: grey;
+}
+
+.wrapper-descriptionBlock, .wrapper-profSkills {
+  background: url(./assets/images/main.jpg) no-repeat;
+  -moz-background-size: 100%; 
+  -webkit-background-size: 100%; 
+  -o-background-size: 100%; 
+  background-size: cover;
+  overflow: hidden;
+}
+
+.wrapper-profSkills {
+  background: url(./assets/images/bg-profSkills.jpeg) no-repeat;
+  background-size: cover;
+}
+
+button {
+  background-color: lightseagreen;
+  padding: 15px 45px;
+  color: white;
+  border-style: none;
+}
+
+button:hover {
+  background-color: DarkCyan;
+  transition: 0.5s;
+}
+
+a {
+  text-decoration: none;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+a:hover {
+  text-decoration: none;
+  color: white;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.aboutUs {
+  clear: both;
+  padding: 10% 15%;
+}
+
+.block-profSkills {
+  float: left;
+  text-align: left;
+  padding: 5%;
+  width: 50%;
+}
+
+.progress-bar {
+  background-color: lightseagreen;
+}
+
+.progress {
+  margin-bottom: 25px;
+  height: 5px;
+}
+
+
+.block-statistic {
+  background-color: lightseagreen;
+  clear: both;
+  color: white;
+  padding: 5%;
+  display: flex;
+  justify-content: space-around;
+  text-align: left;
+}
+
+.wrapper-iconsStatistic {
+  float: left;
+  padding: 0px 10px;
+}
+
+.wrapper-statisticInfo {
+  float: right;
+  padding-left: 10px;
+  position: relative;
+  top: -5px;
+}
+
+.wrapper-projects, .wrapper-unitsProcess {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  display: -webkit-flex;
+  -webkit-flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.block-project, .unit-process {
+  flex: 1 0 25%; 
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.block-project {
+  color: white;
+  position: relative;
+  height: 0;
+  border: none;
+  padding-top: 25%;
+}
+
+.block-project:hover {
+  color: white;
+  background: rgba(0,0,0,.5);  
+  opacity: 0.5;
+  transition: 1s;
+}
+
+.project_icon-eye {
+  position: relative;
+  opacity: 0;
+  padding-bottom: 100%;
+}
+
+.block-project:hover .project_icon-eye {
+  opacity: 1;
+  transition: 1s;
+}
+
+video {
+  object-fit: inherit;
+  width: 100%;
+  max-height: 500px;
+}
+
+.wrapper-workProcess {
+  padding: 5%;
+}
+
+.wrapper-unitsProcess {
+  background-color: whitesmoke;
+  padding: 5% 5% 0% 5%;
+}
+
+.unit-process {
+  display: block;
+  box-sizing: border-box;
+  margin-bottom: 50px;
+  width: calc(1/4*100% - (1 - 1/4)*50px);
+  font-size: 10pt;
+  padding: 0px 5px;
+}
+
+.unit-process > div:first-child {
+  padding-bottom: 5%;
+}
+
+.d-block {
+  height: 400px;
+  background-color: lightseagreen;
+}
+
+.carousel-indicators li {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+}
+
+.carousel-caption {
+  top: 35%;
+}
+
+.carousel-caption p {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 16pt;
+  padding-bottom: 0px;
+}
+
+.logo-client {
+  width: 120px;
+  height: 120px;
+  float: left;
+  background: url(./assets/images/logos.jpg) no-repeat;
+}
+
+.wrapper-form {
+  clear: both;
+  background-color: whitesmoke;
+}
+
+.wrapper-form h3 {
+  font-weight: bold;
+}
+
+.form-content {
+  padding: 5% 25%;
+}
+
+.form-group {
+  margin-bottom: 2rem;
+}
+
+.form-control {
+  border: none;
+  border-radius: 0px;
+  padding: 25px;
+}
+
+
+
+@media(max-width: 414px) {
+  .descriptionBlock {
+    max-width: 100%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .block-project {
+    flex: 1 0 33%; /* explanation below */
+    padding-top: 33%;
+  }
+
+  .unit-process {
+    font-size: 5pt;
+  }
+
+  .d-block {
+    height: 200px;
+  }
+
+  .carousel-caption {
+    top: 20%;
+  }
+
+  .carousel-caption, .carousel-caption p {
+    font-size: 8pt;
+  }
+
+  .form-group {
+    margin-bottom: 1rem;
   }
 }
+
+
+
+@media(min-width: 768px) {
+  .form-row>[class*=col-]:first-child {
+    padding-right: 1rem;
+  }
+
+  .form-row>[class*=col-]:last-child {
+    padding-left: 1rem;
+  }
+}
+
+
+
+@media(max-width: 903px) {
+  .block-profSkills {
+    width: 75%;
+  }
+
+  .wrapper-iconsStatistic {
+    float: none;
+    padding-bottom: 10px;
+    text-align: center;
+  }
+  
+  .wrapper-statisticInfo {
+    float: none;
+    text-align: center;
+    padding-left: 0px;
+  }
+
+  .unit-process {
+    font-size: 8pt;
+    margin-bottom: 20px;
+  }
+
+  .form-content {
+    padding: 5% 15%;
+  }
+}
+
+
+
+
