--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
   font-weight: bold;
 }
 
+h2, h3 {
+  font-weight: bolder;
+}
+
 h2, h3, p {
   padding-bottom: 25px;
 }
@@ -53,7 +57,7 @@ h2, h3, p {
 
 button {
   background-color: lightseagreen;
-  padding: 15px 45px;
+  padding: 3% 9%;
   color: white;
   border-style: none;
 }
@@ -239,53 +243,6 @@ video {
   padding: 25px;
 }
 
-
-
-@media(max-width: 414px) {
-  .descriptionBlock {
-    max-width: 100%;
-  }
-
-  .block-project {
-    flex: 1 0 33%; /* explanation below */
-    padding-top: 33%;
-  }
-
-  .unit-process {
-    font-size: 5pt;
-  }
-
-  .d-block {
-    height: 200px;
-  }
-
-  .carousel-caption {
-    top: 20%;
-  }
-
-  .carousel-caption, .carousel-caption p {
-    font-size: 8pt;
-  }
-
-  .form-group {
-    margin-bottom: 1rem;
-  }
-}
-
-
-
-@media(min-width: 768px) {
-  .form-row>[class*=col-]:first-child {
-    padding-right: 1rem;
-  }
-
-  .form-row>[class*=col-]:last-child {
-    padding-left: 1rem;
-  }
-}
-
-
-
 @media(max-width: 903px) {
   .block-profSkills {
     width: 75%;
@@ -310,6 +267,75 @@ video {
 
   .form-content {
     padding: 5% 15%;
+  }
+}
+
+
+@media(min-width: 768px) {
+  .form-row>[class*=col-]:first-child {
+    padding-right: 1rem;
+  }
+
+  .form-row>[class*=col-]:last-child {
+    padding-left: 1rem;
+  }
+}
+
+
+@media(max-width: 414px) {
+  body {
+    font-size: 10pt;
+  }
+
+  h2, h3 {
+    font-size: 12pt;
+  }
+
+  h2, h3, p {
+    padding-bottom: 10px;
+  }
+
+  .descriptionBlock {
+    max-width: 100%;
+  }
+
+  .wrapper-iconsStatistic svg {
+    height: 20px;
+    width: 20px;
+  }
+
+  .block-project {
+    flex: 1 0 33%; /* explanation below */
+    padding-top: 33%;
+  }
+
+  .unit-process {
+    font-size: 6pt;
+  }
+
+  b {
+    font-size: 5pt;
+  }
+
+  .d-block {
+    height: 200px;
+  }
+
+  .carousel-caption {
+    top: 20%;
+  }
+
+  .carousel-caption, .carousel-caption p {
+    font-size: 8pt;
+  }
+
+  .carousel-indicators li {
+    width: 5px;
+    height: 5px;
+  }
+
+  .form-group {
+    margin-bottom: 1rem;
   }
 }
 
