--- a/src/components/Main/Contact/ContactPage.module.css
+++ b/src/components/Main/Contact/ContactPage.module.css
@@ -1,24 +1,55 @@
 .contactPage {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    flex-wrap: wrap;
     text-align: left;
     padding: 5%;
+    background-color: whitesmoke;
+    color: grey;
 }
 
-.wrapperFormContainer div[class="form-content"] {
-    padding: 0%;
-    padding-left: 5%;
+.contactPage > div:first-child {
+    width: 40%;
+    padding-right: 50px;
 }
 
+.contactPage > div:nth-child(2) {
+    width: 60%;
+}
 
+h4 {
+    font-weight: bolder;
+    padding-bottom: 15px;
+}
 
-@media(max-width: 411px) {
+h4, .itemContactName {
+    color: black;
+}
+
+.itemContact {
+    padding-bottom: 15px;
+}
+
+.itemContactName {
+    font-weight: bolder;
+    padding-right: 10px;
+}
+
+.contactMap {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+    width: 100%;
+    position: relative;
+}
+
+@media(max-width: 500px) {
     .contactPage {
-        display: block;
+        flex-direction: column;
     }
 
-    .wrapperFormContainer div[class="form-content"] {
-        padding-left: 0%;
-        text-align: center;
+    .contactPage > div:first-child, .contactPage > div:nth-child(2){
+        width: 100%;
+
     }
 }
